# ORION-Unified-CDR-Engine

./: .dockerignore  .gitignore  INTEGRATION.md  Makefile  QUICKSTART-RHEL.md  README.md  Vagrantfile  docker-compose.yml  fix-dockerfiles.ps1  guide_de_reprise.md
arborescences/: create_docs_structure.ps1  create_orion_dataset_structure.ps1  create_orion_docker_compose.ps1  create_orion_dockerfiles.ps1  create_orion_grafana_dashboards.ps1  create_orion_helm_chart.ps1  create_orion_systemd.ps1  create_orion_traffic_generator.ps1  deploy_orion_k8s.ps1  orion.ps1
assets/: emoji-batch-strategy.txt  emoji-prompts.txt  organize-emojis.ps1
bootstrap/: create_orion_ci_pipeline.ps1  create_orion_configs.ps1  create_orion_docs.ps1  create_orion_env.ps1  create_orion_generate_cdr.ps1  create_orion_k8s_ingress.ps1  create_orion_k8s_manifests.ps1  create_orion_kafka_producer.ps1  create_orion_microservices.ps1  create_orion_prometheus_config.ps1  create_orion_workspace.ps1  orion.ps1  orion_orchestrator.ps1
config/: prometheus.yml
config/grafana/dashboard-definitions/: overview.json  traffic-generator.json
config/grafana/dashboards/: dashboards.yml
docs/: README.md
docs/00-overview/: glossary.md  introduction.md  vision.md
docs/01-cadrage/: cahier-des-charges.md  note-de-cadrage.md  roadmap.md
docs/02-architecture/: architecture-detaillee.md  architecture-globale.md  kafka-pipeline-flow.md  securite.md
docs/02-architecture/decisions/: adr-001-rust-only.md  adr-002-scylla.md  adr-003-ceph.md  adr-004-kafka-multi-pays.md  adr-005-ml-grpc.md
docs/03-data/: datasets.md  schema-cdr-unifie.md  scylladb-model.md
docs/04-ml/: features.md  fraud-agent.md  model.md
docs/05-deploiement/: ceph.md  docker-local.md  monitoring.md  rhel.md  systemd.md  virtualbox-rhel-setup.md
docs/06-demo/: scenario.md  scripts.md
orion-api/: Cargo.toml  Dockerfile  README.md
orion-api/src/: config.rs  main.rs  repository.rs  routes.rs
orion-cli/: BUILD_STATUS.md  Cargo.toml  README.md  UTF8_BORDERS.md
orion-cli/src/: main.rs
orion-cli/src/api/: client.rs
orion-cli/src/commands/: cdr.rs  fraud.rs  health.rs  kafka.rs  logs.rs  mod.rs  scylla.rs  status.rs
orion-cli/src/tui/: monitor.rs
orion-enrichment/: .env.example  Cargo.toml  Dockerfile  README.md
orion-enrichment/src/: config.rs  main.rs  metrics.rs
orion-enrichment/src/service/: enricher.rs  kafka_consumer.rs  kafka_producer.rs  mod.rs  model.rs
orion-ingestion/: .env.example  Cargo.toml  Dockerfile  README.md
orion-ingestion/src/: config.rs  main.rs  metrics.rs  routes.rs
orion-ingestion/src/service/: kafka_consumer.rs  mod.rs  model.rs  processor.rs
orion-ml-fraud-agent/: Cargo.toml  Dockerfile  README.md
orion-ml-fraud-agent/models/: fraud_weights.json
orion-ml-fraud-agent/src/: config.rs  features.rs  main.rs  metrics.rs  model.rs  routes.rs  simple_ml.rs
orion-normalization/: .env.example  Cargo.toml  Dockerfile  README.md
orion-normalization/src/: config.rs  main.rs  metrics.rs  routes.rs
orion-normalization/src/service/: kafka_consumer.rs  kafka_producer.rs  mod.rs  model.rs  normalizer.rs
orion-observability/: Cargo.toml  Dockerfile  README.md
orion-observability/src/: config.rs  health.rs  main.rs  metrics.rs  routes.rs
orion-storage-cold/: Cargo.toml  Dockerfile  README.md
orion-storage-cold/src/: config.rs  main.rs  metrics.rs  routes.rs  schema.rs  service.rs  uploader.rs  writer.rs
orion-storage-hot/: .env.example  Cargo.toml  Dockerfile  README.md
orion-storage-hot/src/: config.rs  main.rs  metrics.rs  routes.rs
orion-storage-hot/src/service/: CLONE_OPTIMIZATION_ANALYSIS.md  kafka_consumer.rs  mod.rs  model.rs  scylla_repository.rs
orion-traffic-generator/: .env.example  Cargo.toml  Dockerfile  README.md
orion-traffic-generator/src/: config.rs  generator.rs  main.rs  metrics.rs
orion-validation/: .env.example  Cargo.toml  Dockerfile  README.md
orion-validation/src/: config.rs  main.rs  metrics.rs
orion-validation/src/service/: kafka_consumer.rs  kafka_producer.rs  mod.rs  model.rs  validator.rs
scripts/: migrate-minio-to-ceph.sh  setup-virtualbox.ps1
scripts/storage/: ceph-demo.sh  deploy-ceph-docker.sh
tests/: README.md  integration_test.sh  load_test.sh  smoke_test.sh
