[package]
name = "orion-ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Error handling
thiserror = "1"
anyhow = "1"

# Configuration
config = "0.14"

[dev-dependencies]
mockall = "0.12"
