[package]
name = "orion-ml-fraud-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Configuration
config = "0.14"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
