[package]
name = "orion-storage-cold"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
prometheus = "0.13"

# S3-compatible storage (MinIO/Ceph RGW)
aws-sdk-s3 = "1.70"
aws-config = "1.5"

# Parquet + Arrow
parquet = { version = "53.3", features = ["arrow"] }
arrow = "53.3"

# Kafka
# Note: rdkafka-sys fails on Windows, using HTTP-based alternative
# rdkafka = { version = "0.37", features = ["tokio"] }
reqwest = { version = "0.12", features = ["json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.14"
tokio-test = "0.4"

