[package]
name = "orion-traffic-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
metrics = "0.21"
metrics-exporter-prometheus = "0.13"
rdkafka = { version = "0.36", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
