[package]
name = "orion-traffic-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15"
